<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProdutoActivity"
    >


  <TextView
      android:layout_margin="12dp"
      android:id="@+id/nomeProdutoTv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="26sp"
      android:textStyle="bold"
      android:text="@string/tv_produto"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_margin="12dp"
        android:id="@+id/qtdProdutoTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/qtd_Produto"
        android:textSize="26sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/produtoImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img_produto"
        android:layout_margin="22dp"
        app:layout_constraintTop_toBottomOf="@id/nomeProdutoTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

  <TextView
      android:id="@+id/precoprodutoTv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tv_valor"
      android:textSize="20sp"
      app:layout_constraintTop_toBottomOf="@id/produtoImg"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
    />

  <Button
      android:id="@+id/alugaBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="22sp"
      android:text="@string/aluga_Btn"
      android:textAllCaps="true"
      android:backgroundTint="@color/blue_dark"
      app:layout_constraintTop_toBottomOf="@id/produtoImg"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/descricaoTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/alugaBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/tv_descricao"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>