<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/input_email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.loginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoapp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email2"
            android:layout_width="match_parent"
            android:layout_height="61dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_senha"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Esqueci a senha"
                android:layout_gravity="center"
                android:hint="@string/hint_esqueci_senha"
                android:layout_margin="5dp"
                android:textColor="@color/blue_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text"/>


            <Button
                android:id="@+id/elevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Logar"
                android:backgroundTint="@color/blue_dark"
                android:layout_margin="5dp"
                android:hint="@string/hint_logar"
                android:layout_gravity="center"
                tools:layout_editor_absoluteX="161dp"
                tools:layout_editor_absoluteY="270dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fazer cadastro"
                android:layout_gravity="center"
                android:hint="@string/hint_cadastro"
                android:layout_margin="5dp"
                android:textColor="@color/blue_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text2"/>
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
